# softwareudvikling_aflevering

./: .$Domain model.drawio.bkp  .$Use case diagram.drawio.bkp  .gitignore  AllreadyInProgramDB.txt  Dokumentation.docx  README.md  Use case diagram.drawio
Dokumentations_includes/: .$Class diagram.drawio.bkp  .$Class diagram_I1.drawio.bkp  .$Class diagram_I3.drawio.bkp  .$Domain model_I1.drawio.bkp  .$Use case diagram_I1.drawio.bkp  Class diagram_I1.drawio  Class diagram_I2.drawio  Class diagram_I3.drawio  Domain model.drawio  Domain model_I1.drawio  Use case diagram.drawio  Use case diagram_I1.drawio
Portefoelje/: .gitignore  CMakeLists.txt  SQLdatabase.cpp  SQLdatabase.h  cavefactory.cpp  cavefactory.h  caves.cpp  caves.h  character.cpp  character.h  keyboard.cpp  keyboard.h  main.cpp  monster.cpp  monster.h  monsterfactory.cpp  monsterfactory.h  weapon.h  weaponfactory.cpp  weaponfactory.h  world.cpp  world.h
